--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
+console = "0.15.8"
+indicatif = "0.17.8"
 thiserror = "2.0.2"
