--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
 console = "0.15.8"
+env_logger = "0.11.5"
 indicatif = "0.17.8"
+log = "0.4.22"
 prost = "0.13.3"
 prost-types = "0.13.3"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
 thiserror = "2.0.2"
 
 [build-dependencies]
