--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ prost-types = "0.13.3"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 thiserror = "2.0.2"
+threadpool = "1.8.1"
 
 [build-dependencies]
 prost-build = "0.13.3"
